fixed poster page

--- a/posters.html
+++ b/posters.html
@@ -15,6 +15,7 @@
 	<div class="allthings">
 	
 		<!--This begins the different boxes you can have. The first box has a different style than the rest-->
+		<div class="headerwrap">
 		<div id="title" class="header3"><!--to modify the style, look at div.header in the style section-->
 			<!-- <img src="MeLogo3.png" alt="Xinu" class="melogo2"> -->
 			<div>
@@ -24,31 +25,32 @@
 			</div>
 			<!-- <img src="MeLogo3.png" alt="Xinu" class="placeholder"> -->
 		</div>
+		</div>
 		<div class="header">
 			<hr>
 		</div>
 		
 		<div class="contentbox2">
-			<iframe id="poster1" src="posters/SkinnerPoster.pdf" height="900" width="100%"></iframe>
+			<iframe id="poster1" src="posters/SkinnerPoster.pdf" height="900" width="100%" style="margin: 10px;"></iframe>
 			<div class="header">
 				<p id="backtotop3"> This poster won a <a href="https://www.jlab.org/education/hugs/hugsprizes">poster prize</a></p>
 				<a href="posters/SkinnerPoster.pdf" target="_blank" id="backtotop4">Open in new tab</a>
-				<hr>
 			</div>
+			<hr width="100%" style="margin: 10px;">
 			<!-- <div class="header"> -->
 				<!-- <hr> -->
 			<!-- </div> -->
-			<iframe id="poster2" src="posters/Copy of poster2.pdf" height="900" width="100%"></iframe>
+			<iframe id="poster2" src="posters/Copy of poster2.pdf" height="900" width="100%" style="margin: 10px;"></iframe>
 			<div class="header">
 				<a href="posters/Copy of poster2.pdf" target="_blank" id="backtotop5">Open in new tab</a>
-				<hr>
 			</div>
-			<iframe id="poster3" src="posters/SKINNER_S_poster.pdf" height="900" width="100%"></iframe>
+			<hr width="100%" style="margin: 10px;">
+			<iframe id="poster3" src="posters/SKINNER_S_poster.pdf" height="900" width="100%" style="margin: 10px;"></iframe>
 			<div class="header">
 				<a href="posters/SKINNER_S_poster.pdf" target="_blank" id="backtotop6">Open in new tab</a>
-				<hr>
 			</div>
-			<iframe id="poster4" src="posters/Final Poster (3).pdf" height="900" width="100%"></iframe>
+			<hr width="100%" style="margin: 10px;">
+			<iframe id="poster4" src="posters/Final Poster (3).pdf" height="900" width="100%" style="margin: 10px;"></iframe>
 			<div class="header">
 				<a href="posters/Final Poster (3).pdf" target="_blank" id="backtotop7">Open in new tab</a>
 			</div>
