added new status

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 	
 <body id="greg">
-
+	<!-- https://physics.mst.edu/media/academic/physics/documents/newsletter/Matter_n_Motion2019_final.pdf -->
 	<div class="allthings" id="george">
 		<div class="headerwrap">
 		<!-- <img src="css/bg16.jpg" style="width:calc(100% - 20px); margin-left: 10px;margin-right: 10px;margin-top: 20px;opacity: 0.5;"> -->
@@ -25,7 +25,7 @@
 				<!-- <h3 id="intro"></h3> -->
 			</div>
 			<div style="height: 80px;width: 80px;">
-				<script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=5a95pig54cb&amp;m=7&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33&amp;s=80" async="async"></script>
+				<script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=5a95pig54cb&amp;m=7&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33&amp;l=33" async="async"></script>
 			</div>
 		</div>
 		</div>
@@ -178,8 +178,20 @@
 				<!-- <img id="cows" src="css/8195-cows-in-a-field-pv.jpg" width="75%"> -->
 			<!-- </div> -->
 		<!-- </div> -->
+		<div class="headerwrap" id="ansys">
+			<div id="item7" class="header4"> 
+				<div class="ansyspic" >
+					<img src="logos/Media.jpg" style="max-width: 500px;width: 100%">
+				</div>
+				<!-- <h1>Ansys</h1> -->
+				<div class="ansysdet" >
+					<h1>Find me at <a class="ansyslink" href="https://www.ansys.com/">Ansys</a>!</h1>
+					<p>I was hired on as an R&D Engineer at Ansys in August 2024 where I can continue my passion of developing scientific simulations.</p>
+				</div>
+			</div>
+		</div>
 		<div class="contentbox" id="ed">
-			<div id="item7" class="content"> 
+			<div id="item8" class="content"> 
 				<div class="contentinner">
 					<h1>Education</h1>
 					<table style="width:100%; text-align: center;">
@@ -380,9 +392,40 @@
 		}
 		console.log(ed.innerHTML);
 	}
+	function reformatAnsysTile(){
+		const greg = document.getElementById("greg");
+		const ed = document.getElementById("ed");
+		const collection = document.getElementsByClassName("ansyspic");
+		const collection2 = document.getElementsByClassName("ansysdet");
+		const max_width = 1000;
+		if(greg.clientWidth>max_width){
+			for (let i = 0; i<collection.length; i++){
+				collection[i].style.width="60%";
+			}
+			for (let i = 0; i<collection2.length; i++){
+				collection2[i].style.width="40%";
+			}
+		} else if( (greg.clientWidth>max_width) && (greg.clientWidth<1200)) {
+			for (let i = 0; i<collection.length; i++){
+				collection[i].style.width="50%";
+			}
+			for (let i = 0; i<collection2.length; i++){
+				collection2[i].style.width="50%";
+			}
+		} else {
+			for (let i = 0; i<collection.length; i++){
+				collection[i].style.width="100%";
+			}
+			for (let i = 0; i<collection2.length; i++){
+				collection2[i].style.width="100%";
+			}
+		}
+	}
 	console.log('here');
 	replaceeduction();
+	reformatAnsysTile();
 	window.addEventListener('resize', replaceeduction);
+	window.addEventListener('resize', reformatAnsysTile);
 	
 	
 </script>
